# CV-Works

./: .gitignore  CMakeLists.txt  README.md  Work_1.cpp  Work_1.h  Work_10.cpp  Work_10.h  Work_11.cpp  Work_11.h  Work_12.cpp  Work_12.h  Work_13.cpp  Work_13.h  Work_14.cpp  Work_14.h  Work_15.cpp  Work_15.h  Work_2.cpp  Work_2.h  Work_3.cpp  Work_3.h  Work_4.cpp  Work_4.h  Work_5.cpp  Work_5.h  Work_6.cpp  Work_6.h  Work_7.cpp  Work_7.h  Work_8.cpp  Work_8.h  Work_9.cpp  Work_9.h  Work_baseClass.cpp  Work_baseClass.h  main.cpp  vcpkg.json
.github/workflows/: build_release.yml
